--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "antd": "^5.10.2",
     "axios": "^1.6.0",
     "chart.js": "^4.4.0",
+    "dateformat": "^5.0.3",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
+    "redux-devtools-extension": "^2.13.9",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2"
   },
