--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
     "@redux-devtools/extension": "^3.2.5",
-    "antd": "^5.10.2",
+    "antd": "^5.10.3",
     "axios": "^1.6.0",
     "chart.js": "^4.4.0",
     "dateformat": "^5.0.3",
@@ -26,16 +26,22 @@
     "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.23.2",
+    "@babel/preset-env": "^7.23.2",
+    "@babel/preset-react": "^7.22.15",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
     "autoprefixer": "^10.4.16",
+    "babel-loader": "^9.1.3",
     "eslint": "^8.45.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.4",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4"
   }
 }
