--- a/package.json
+++ b/package.json
@@ -18,9 +18,13 @@
     "dateformat": "^5.0.3",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-chartjs-2": "^5.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
+    "react-toggle-dark-mode": "^1.1.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2"
